test/hotCases/invalidate/during-idle/a.js
export function invalidate() {
	module.hot.invalidate();
}

export const value = {};
